tests/checker/bad/lib/BadPMLib.scillib
library BadPMLib

let badpm =
  fun (b : Bool) =>
    match b with
    | True => False
    end
